# ChromaHacker

./: PKG-INFO  pyproject.toml
ChromaHacker/: pyproject.toml
ChromaHacker/chromahacker/: __init__.py  color_input.py  palettize.py  spline.py
ChromaHacker/tests/: main.py
backend/: colorschemes.json  model.h5  pyproject.toml
backend/chromahacker/: __init__.py  apply.py  greyscale.py  id_clut.py  new_file.py  palettize.py  process_image.py
backend/chromahacker/colorschemes/: colorschemes.py
backend/chromahacker_frontend/: index.html  package-lock.json  tailwind.config.js  vite.config.ts
backend/chromahacker_frontend/src/: App.tsx  ColorInputs.tsx  index.css
backend/chromahackerweb/: __main__.py
backend/tests/: main.py
chromahacker/: color_input.py  palettize.py  process_image.py  spline.py
chromahacker_frontend/: package-lock.json  package.json
chromahacker_frontend/src/: App.tsx  ColorInputs.tsx  index.css
frontend/: pyproject.toml
frontend/chromahackerweb/: model.pickle
image_lib/: pyproject.toml
image_lib/chromahacker/: apply.py  color_input.py  process_image.py  spline.py
image_lib/chromahacker/colorschemes/: __init__.py
image_lib/tests/: main.py
machine_learning/: Data_Formation.ipynb  Untitled3.ipynb  pyproject.toml
video/: apply_anim.blend  make_spline_anim.blend  palettize_custom  pyproject.toml  video.blend  video.blend1
video/BL_proxy/2023-10-28 15-16-45.mp4/: proxy_100.avi  record_run.blen_tc
video/BL_proxy/2023-10-28 15-17-14.mp4/: free_run.blen_tc  proxy_100.avi  record_run_no_gaps.blen_tc
video/BL_proxy/2023-10-28 15-17-41.mp4/: proxy_100.avi  record_run.blen_tc  record_run_no_gaps.blen_tc
video/BL_proxy/apply_animation.mp4/: record_run_no_gaps.blen_tc
video/BL_proxy/catmullRomInterpolation.mp4/: free_run.blen_tc  proxy_100.avi
video/BL_proxy/make_spline_anim_2.mp4/: interp_free_run.blen_tc  proxy_100.avi
video/BL_proxy/make_spline_animation_2.mp4/: proxy_100.avi  record_run.blen_tc
video/video/: __main__.py  apply_animation.py  make_spline_animation_1.py  make_spline_animation_2.py
