[tool.poetry]
name = "chromahacker"
version = "0.1.4"
description = ""
authors = ["FaunuX <judahpspiegel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0.72"
pillow = "^9.5.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
