[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["FaunuX <100310972+FaunuX@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "machine_learning"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
